# resume-analyzer

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
app/: db.py  main.py
app/helpers/: __init__.py  analysis.py  pdf.py  retrieval.py
app/llms/: __init__.py  groq_client.py
app/routers/: job_requirements.py
